refactor: update installation instructions for numpy, datasets, and huggingface_hub in automatic model training notebook

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -235,7 +235,14 @@
                 "# Note: Run this cell once, then restart kernel if needed\n",
                 "# Using compatible version ranges to avoid NumPy 2.x, packaging, and HfFolder issues\n",
                 "# datasets 2.20.0+ works with huggingface_hub 0.24.0+ (HfFolder was removed in 0.20.0)\n",
-                "%pip install -q -U --force-reinstall \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
+                "\n",
+                "# If using conda (recommended for conda environments):\n",
+                "# !conda install -y -c conda-forge \"numpy<2\" \"pyarrow>=14\" \"packaging>=24\"\n",
+                "# !conda install -y -c huggingface \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\"\n",
+                "# %pip install \"fsspec>=2024.6.0\" \"aiohttp\" \"soundfile\"\n",
+                "\n",
+                "# If using pip (works in any environment, but can conflict with conda):\n",
+                "%pip install -q -U \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
             ]
         },
         {
