refactor: enhance version checking and installation instructions for datasets and huggingface_hub in automatic model training notebook

--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -141,15 +141,34 @@
                 "except Exception as e:\n",
                 "    print(\"ERROR loading pyarrow:\", type(e).__name__, str(e))\n",
                 "\n",
+                "# Check installed versions before importing\n",
+                "try:\n",
+                "    import subprocess\n",
+                "    result = subprocess.run([sys.executable, \"-m\", \"pip\", \"show\", \"datasets\"], \n",
+                "                          capture_output=True, text=True)\n",
+                "    if result.returncode == 0:\n",
+                "        for line in result.stdout.split('\\n'):\n",
+                "            if line.startswith('Version:'):\n",
+                "                print(f\"Installed datasets version: {line.split(':')[1].strip()}\")\n",
+                "                break\n",
+                "except:\n",
+                "    pass\n",
+                "\n",
                 "try:\n",
                 "    import datasets\n",
                 "    print(\"datasets version:\", datasets.__version__)\n",
+                "    if datasets.__version__.startswith(\"2.14\") or datasets.__version__.startswith(\"2.1\"):\n",
+                "        print(\"WARNING: datasets version is too old! Need >=2.20.0\")\n",
+                "        print(\"Current version will fail with newer huggingface_hub\")\n",
                 "except ImportError as e:\n",
                 "    error_msg = str(e)\n",
                 "    if \"HfFolder\" in error_msg or \"cannot import name\" in error_msg:\n",
                 "        print(\"ERROR: Version incompatibility between datasets and huggingface_hub\")\n",
                 "        print(\"datasets 2.14.6 requires huggingface_hub < 0.20.0, but newer versions removed HfFolder\")\n",
-                "        print(\"Solution: pip install --force-reinstall 'datasets>=2.20.0,<3.0' 'huggingface_hub>=0.24.0'\")\n",
+                "        print(\"\")\n",
+                "        print(\"FIX: Run this in a cell, then restart kernel:\")\n",
+                "        print(\"  %pip install --force-reinstall --no-deps 'datasets>=2.20.0,<3.0'\")\n",
+                "        print(\"  %pip install 'huggingface_hub>=0.24.0'\")\n",
                 "    else:\n",
                 "        print(\"ERROR: datasets not installed:\", e)\n",
                 "        print(\"Please install datasets: pip install datasets>=2.20.0\")\n",
@@ -236,13 +255,18 @@
                 "# Using compatible version ranges to avoid NumPy 2.x, packaging, and HfFolder issues\n",
                 "# datasets 2.20.0+ works with huggingface_hub 0.24.0+ (HfFolder was removed in 0.20.0)\n",
                 "\n",
-                "# If using conda (recommended for conda environments):\n",
+                "# IMPORTANT: If conda didn't upgrade datasets, use pip to force upgrade\n",
+                "# Conda sometimes keeps old versions due to dependency constraints\n",
+                "\n",
+                "# Option 1: Try conda first (recommended for conda environments)\n",
                 "# !conda install -y -c conda-forge \"numpy<2\" \"pyarrow>=14\" \"packaging>=24\"\n",
                 "# !conda install -y -c huggingface \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\"\n",
                 "# %pip install \"fsspec>=2024.6.0\" \"aiohttp\" \"soundfile\"\n",
                 "\n",
-                "# If using pip (works in any environment, but can conflict with conda):\n",
-                "%pip install -q -U \"numpy<2\" \"datasets>=2.20.0,<3.0\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
+                "# Option 2: Force upgrade with pip (use if conda keeps old datasets version)\n",
+                "# The --no-deps flag prevents pip from downgrading other packages conda installed\n",
+                "%pip install --force-reinstall --no-deps \"datasets>=2.20.0,<3.0\"\n",
+                "%pip install -q -U \"numpy<2\" \"huggingface_hub>=0.24.0\" \"fsspec>=2024.6.0\" \"pyarrow>=14\" \"aiohttp\" \"soundfile\" \"packaging>=24.0\""
             ]
         },
         {
