--- a/notebooks/automatic_model_training.ipynb
+++ b/notebooks/automatic_model_training.ipynb
@@ -187,6 +187,21 @@
         {
             "cell_type": "code",
             "execution_count": null,
+            "id": "3eb806f9",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# FIX: Upgrade datasets to compatible version\n",
+                "# Run this cell if the debug cell shows datasets 2.14.6\n",
+                "# Then RESTART KERNEL before continuing\n",
+                "\n",
+                "%pip install --force-reinstall --no-deps \"datasets>=2.20.0,<3.0\"\n",
+                "%pip install \"huggingface_hub>=0.24.0\"\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
             "id": "d4c1056e",
             "metadata": {
                 "ExecuteTime": {
